Solve some Sonar issues out of boredom